--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </nav>
         </header>
         <!-- login section -->
-        <div class="hero bg-base-200 flex justify-center py-24">
+        <div class="hero">
             <div class="card bg-base-100 w-full max-w-sm shadow-2xl">
                 <form class="card-body">
                     <div class="form-control">
