--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <section class="min-h-screen max-w-md mx-auto py-6 bg-gray-200">
         <header>
             <nav class="flex justify-center items-center mt-10">
-                <div class="flex justify-center items-center mt-10 mb-10 w-9/12  relative">
-                    <img class="w-48 absolute" src="assets/Rectangle 1.png" alt="">
-                    <img class="w-16" src="assets/Group.png" alt="">
+                <div class="flex justify-center items-center  w-full relative">
+                    <img class="w-60" src="assets/Rectangle 1.png" alt="">
+                    <img class="top-12 absolute" src="assets/Group.png" alt="">
                 </div>
             </nav>
         </header>
