--- a/main.html
+++ b/main.html
@@ -79,7 +79,7 @@
                     <div class="card w-full ">
                         <form class="card-body">
                             <label for="">Select Bank</label>
-                            <select class="select select-bordered w-full">
+                            <select id="all-bank" class="select select-bordered w-full">
                                 <option disabled selected>Select bank</option>
                                 <option value="Bkash">Bkash</option>
                                 <option value="Nagad">Nagad</option>
@@ -89,7 +89,7 @@
                                 <label class="label">
                                     <span class="label-text">Account number</span>
                                 </label>
-                                <input id="account-number" value="" type="number" placeholder="type your account number"
+                                <input id="account-number" value="01994183034" type="number" placeholder="type your account number"
                                     class="input input-bordered" required />
                             </div>
                             <div class="form-control">
@@ -103,7 +103,7 @@
                                 <label class="label">
                                     <span class="label-text">PIN</span>
                                 </label>
-                                <input id="pin" value="" type="text" placeholder="type your PIN" class="input input-bordered" required />
+                                <input id="pin" value="1234" type="text" placeholder="type your PIN" class="input input-bordered" required />
                                 <label class="label">
                                     <a href="#" class="label-text-alt link link-hover">Forgot password?</a>
                                 </label>
@@ -127,7 +127,7 @@
                                 <label class="label">
                                     <span class="label-text">Account number</span>
                                 </label>
-                                <input id="account-number" value="" type="number" placeholder="type your account number"
+                                <input id="account-number" value="01994183034" type="number" placeholder="type your account number"
                                     class="input input-bordered" required />
                             </div>
                             <div class="form-control">
@@ -141,7 +141,7 @@
                                 <label class="label">
                                     <span class="label-text">PIN</span>
                                 </label>
-                                <input id="pin-out" value="" type="text" placeholder="type your PIN" class="input input-bordered"
+                                <input id="pin-out" value="1234" type="text" placeholder="type your PIN" class="input input-bordered"
                                     required />
                                 <label class="label">
                                     <a href="#" class="label-text-alt link link-hover">Forgot password?</a>
