--- a/main.html
+++ b/main.html
@@ -22,24 +22,28 @@
     </script>
 </head>
 <body class="bg-slate-800">
-    <section class="min-h-screen max-w-md mx-auto py-6 bg-gray-200">
+    <section class="min-h-screen max-w-md mx-auto bg-gray-200">
         <header >
-            <nav class="flex justify-around items-center">
-                <img src="assets/Group.png" alt="">
-                <div>
-                    <h1 class="text-3xl font-bold">$ <span id="main-balance">4500</span></h1>
-                    <p class="">available balance</p>
+            <nav class="flex justify-between items-center p-6">
+                <div class="flex gap-2">
+                    <img class="" src="assets/Group.png" alt="">
+                    <div class="space-y-1 py-2">
+                        <h1 class="text-2xl font-bold">$ <span id="main-balance">45000</span></h1>
+                        <p class="">available balance</p>
+                    </div>
                 </div>
-                <button class="">logout</button>
+                <button class="btn border-gray-300 px-7">logout</button>
             </nav>
-            <hr class="border-black my-4">
+            <hr class="border-gray-300 mb-4">
 
-            <section class="p-3">
-                <h1 class="text-2xl font-bold mb-2">Welcome to Payooo!</h1>
-                <p>Enjoy easy and convenient financial services with us. Cashout charge is low</p>
+            <section class="">
+                <div class="px-6">
+                    <h1 class="text-2xl font-bold mb-2">Welcome to Payooo!</h1>
+                    <p>Enjoy easy and convenient financial services with us. Cashout charge is low</p>
+                </div>
                 <div class="grid grid-cols-3 mt-10 cursor-pointer">
                     <!-- card-1 -->
-                    <div id="toggle-add" class="border  p-4 text-center">
+                    <div id="toggle-add" class="border p-4 text-center">
                         <img class="w-8 mx-auto" src="assets/wallet 1.png" alt="">
                         <h2 class="font-semibold">Add Money</h2>
                     </div>
